[workspace]

members = [
    "advanced_generics",
    "async_ex",
    "async_stream",
    "borrow",
    "closure",
    "con_utils",
    "concurrency", "data_processing",
    "data_structure",
    "doc",
    "ffi_bzlib_sys",
    "fib",
    "guessing_game",
    "hash_table",
    "hello",
    "hello_rust",
    "httpie",
    "lifetime", "macros",
    "multi_owner",
    "ownership",
    "scrape_url",
    "smart_pointers",
    "sys_traits",
    "thumbor",
    "traits",
    "type_system",
]
